#653 Include AUTHORS.md into JAR file

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+            </resource>
+            <resource>
+                <directory>.</directory>
+                <includes>
+                    <include>AUTHORS.md</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
