#665 Starts using new JSON parser.

--- a/pom.xml
+++ b/pom.xml
@@ -230,9 +230,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-        	<groupId>com.googlecode.soundlibs</groupId>
-        	<artifactId>jorbis</artifactId>
-        	<version>0.0.17.4</version>
+            <groupId>com.googlecode.soundlibs</groupId>
+            <artifactId>jorbis</artifactId>
+            <version>0.0.17.4</version>
+        </dependency>
+        <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20231013</version>
         </dependency>
     </dependencies>
     <name>Open Realm of Stars</name>
