--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
                 <directory>.</directory>
                 <includes>
                     <include>AUTHORS.md</include>
+                    <include>CONTRIBUTING.md</include>
+                    <include>MODDING.md</include>
                 </includes>
             </resource>
         </resources>
