--- a/pom.xml
+++ b/pom.xml
@@ -141,12 +141,32 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <configuration>
-                    <groups>org.openRealmOfStars.UnitTest,org.openRealmOfStars.BehaviourTest</groups>
-                </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>defaultTests</id>
+            <activation>
+                <property>
+                    <name>!groups</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <groups>org.openRealmOfStars.UnitTest,org.openRealmOfStars.BehaviourTest</groups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <reporting>
         <plugins>
